force-app/main/default/objects/TouchNet_UPay_Site__mdt/TouchNet_UPay_Site__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for TouchNet UPay payment sites. Each record represents a different UPay site configuration for processing payments.</description>
    <label>TouchNet UPay Site</label>
    <pluralLabel>TouchNet UPay Sites</pluralLabel>
</CustomObject>