force-app/main/default/objects/TouchNet_UPay_Site__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether this UPay site is currently active and available for use.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>