force-app/main/default/objects/TouchNet_UPay_Site__mdt/fields/Gateway_URL__c.field-meta.xml
<CustomField>
    <fullName>Gateway_URL__c</fullName>
    <description>TouchNet UPay gateway endpoint URL (e.g., https://secure.touchnet.net:8443/C12345_upay/web/index.jsp)</description>
    <label>Gateway URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>