force-app/main/default/objects/TouchNet_UPay_Site__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Optional: Name of the Named Credential that stores the validation key. Use this for secure secret storage instead of Validation_Key__c field.</description>
    <label>Named Credential</label>
    <length>100</length>
    <type>Text</type>
</CustomField>