force-app/main/default/objects/TouchNet_UPay_Site__mdt/fields/UPay_Site_Id__c.field-meta.xml
<CustomField>
    <fullName>UPay_Site_Id__c</fullName>
    <description>TouchNet UPay site identifier (e.g., UNIVNAME_APPFEE). This is provided by TouchNet and identifies which payment form appears in the gateway.</description>
    <label>UPay Site ID</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>