force-app/main/default/objects/TouchNet_UPay_Site__mdt/fields/Validation_Key__c.field-meta.xml
<CustomField>
    <fullName>Validation_Key__c</fullName>
    <description>Optional: Validation key for authenticating requests. Leave blank if using Named Credential instead. This field should be protected in managed package.</description>
    <label>Validation Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>